nav bar updates(logo + resume link)

--- a/about.html
+++ b/about.html
@@ -23,15 +23,14 @@
         <section class="about-section">
             <div class="about-text">
                 <h1>About Me</h1>
-                <p>
-                I’m a student and developer passionate about creating meaningful web
-                experiences. I enjoy learning new technologies and bringing ideas to
-                life through design and code. In my free time, I like exploring new
-                frameworks, photography, and playing basketball.
+                <p> I’m a student and developer passionate about creating meaningful web experiences. I enjoy learning new technologies and bringing ideas to life through design and code. In my free time, I like exploring new frameworks, photography, and playing basketball.
+                    I’m a student and developer passionate about creating meaningful web experiences. I enjoy learning new technologies and bringing ideas to life through design and code. In my free time, I like exploring new frameworks, photography, and playing basketball.
+                    I’m a student and developer passionate about creating meaningful web experiences. I enjoy learning new technologies and bringing ideas to life through design and code. In my free time, I like exploring new frameworks, photography, and playing basketball.
                 </p>
             </div>
         </section>
     </main>
+
 
     <script src="script.js"></script>
 </body>
