--- a/index.html
+++ b/index.html
@@ -9,15 +9,26 @@
 <body>
     
     <nav class="nav-site">
-        <div class="page-wrapper">
-            <ul>
-                <li><a href="index.html" aria-current="page">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul>
+        <div class="nav-inner">
+            <div class="nav-left-group">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="NV Logo">
+                </div>
+
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="index.html" aria-current="page">Home</a></li>
+                        <li><a href="about.html">About Me</a></li>
+                        <li><a href="experience.html">Experience</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <a class="resume-btn" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
         </div>
     </nav>
+
 
     <main class="page-wrapper">
         <section class="main-section">
@@ -26,13 +37,13 @@
                 <p>I'm a third-year Computer Science student at Santa Clara University with an emphasis in data science. My interests span across AI, machine learning, full-stack development, and UI/UX Design. I'm passionate about applying my technical skills and creativity to develop innovative and impactful solutions. </p>
                 <ul class="socials">
                     <li><a href="mailto:nikh.vinod@gmail.com" aria-label="Email">
-                        <img src="img/emailButton.svg" alt="Gmail">
+                        <img src="img/socials/emailButton.svg" alt="Gmail">
                     </a></li>
                     <li><a href="https://www.linkedin.com/in/nikhil-vinod/" target="_blank" rel="noopener" aria-label="LinkedIn">
-                        <img src="img/linkedinButton.svg" alt="LinkedIn">
+                        <img src="img/socials/linkedinButton.svg" alt="LinkedIn">
                     </a></li>
                     <li><a href="https://github.com/NikhilVinod?tab=repositories" target="_blank" rel="noopener" aria-label="GitHub">
-                        <img src="img/githubButton.svg" alt="GitHub">
+                        <img src="img/socials/githubButton.svg" alt="GitHub">
                     </a></li>
                 </ul>
             </div>
