--- a/about.html
+++ b/about.html
@@ -9,13 +9,23 @@
 <body>
 
     <nav class="nav-site">
-        <div class="page-wrapper">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html"  aria-current="page">About Me</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul>
+        <div class="nav-inner">
+            <div class="nav-left-group">
+                <div class="logo">
+                    <img src="img/logo.svg" alt="NV Logo">
+                </div>
+
+                <div class="nav-links">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="about.html"  aria-current="page">About Me</a></li>
+                        <li><a href="experience.html">Experience</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <a class="resume-btn" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
         </div>
     </nav>
 
