--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         <div class="nav-inner">
             <div class="nav-left-group">
                 <div class="logo">
-                    <img src="img/logo.svg" alt="NV Logo">
+                    <img src="img/logos/logo.svg" alt="NV Logo">
                 </div>
 
                 <div class="nav-links">
