--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="nav-inner">
             <div class="nav-left-group">
                 <div class="logo">
-                    <img src="img/logo.svg" alt="NV Logo">
+                    <img src="img/logos/logo.svg" alt="NV Logo">
                 </div>
 
                 <div class="nav-links">
@@ -48,12 +48,12 @@
                 </ul>
             </div>
             <div class="pfp">
-                <img src="img/pfp.jpg" alt="Profile Picture">
+                <img src="img/elements/pfp.png" alt="Profile Picture">
             </div>
         </section>
     </main>
 
-    <img src="img/wave.svg" alt="" class="page-wave">
+    <img src="img/elements/wave.svg" alt="" class="page-wave">
 
     <script src="script.js"></script>
 </body>
