--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@
         <div class="nav-inner">
             <div class="nav-left-group">
                 <div class="logo">
-                    <img src="img/logo.svg" alt="NV Logo">
+                    <img src="img/logos/logo.svg" alt="NV Logo">
                 </div>
 
                 <div class="nav-links">
@@ -29,5 +29,6 @@
         </div>
     </nav>
     
+    <script src="script.js"></script>
 </body>
 </html>
