Updated experience card styling and accurate descriptions for each role. Made back button smaller

--- a/experience.html
+++ b/experience.html
@@ -37,14 +37,14 @@
             <div class="experience-grid">
                 <!-- Card 1 -->
                 <article class="experience-card">
-                    <img src="img/logos/wayLogo.svg" alt="JIFFY.ai logo" class="experience-logo">
-                    <h2 class="experience-company">JIFFY.ai</h2>
+                    <img src="img/logos/wayLogo.svg" alt="wayLogo logo" class="experience-logo">
+                    <h2 class="experience-company">Way.com</h2>
                     <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
+                        <p class="experience-dates">June 2025 - September 2025</p>
                         <ul>
-                            <li>Developed the complete investment account opening journey for Finley mobile app using Flutter for various account types (Individual, Joint, IRA, Education)</li>
-                            <li>Integrated various third party tools like Plaid for data aggregation, Google Places API for address autocomplete functionality, and Twilio for phone verification</li>
-                            <li>Implemented AWS Lambda functions for serverless third party API integration</li>
+                            <li>Developed a mobile application with React Native to perform a 360° vehicle inspection and perform a damage cost assessment</li>
+                            <li>Implemented real time audio/video capture using WebRTC and integrated Gen AI models for guidance and analysis</li>
                         </ul>
                     </div>
                 </article>
@@ -55,10 +55,13 @@
                     <h2 class="experience-company">JIFFY.ai</h2>
                     <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
+                        <p class="experience-dates">June 2025 - September 2025</p>
                         <ul>
-                            <li>Developed the complete investment account opening journey for Finley mobile app using Flutter for various account types (Individual, Joint, IRA, Education)</li>
-                            <li>Integrated various third party tools like Plaid for data aggregation, Google Places API for address autocomplete functionality, and Twilio for phone verification</li>
-                            <li>Implemented AWS Lambda functions for serverless third party API integration</li>
+                            <li>Developed the end-to-end investment account opening journey for the Finley mobile app using Flutter, supporting
+multiple account types (Individual, Joint, IRA, and Education)</li>
+                            <li>Integrated various third party tools: Plaid for data aggregation, Google Places API for address autocomplete
+functionality, and Twilio for phone verification</li>
+                            <li>Deployed AWS Lambda functions for back-end API integration</li>
                         </ul>
                     </div>
                 </article>
@@ -69,10 +72,12 @@
                     <h2 class="experience-company">Bhailog</h2>
                     <p class="experience-role">UI/UX Designer</p>
                     <div class="experience-description">
+                        <p class="experience-dates">June 2025 - September 2025</p>
                         <ul>
-                            <li>Designed user interfaces and user experience flows for the Bhailog platform</li>
-                            <li>Created wireframes, prototypes, and high-fidelity mockups using Figma</li>
-                            <li>Collaborated with the development team to ensure design consistency across the application</li>
+                            <li>Led the end-to-end UX design process for the official Bhailog app, from research to final product delivery, ensuring a
+seamless and user-friendly experience</li>
+                            <li>Created wireframes, prototypes, and high-fidelity mockups using Figma and Miro, ensuring clear communication of
+design concepts and interactive elements</li>
                         </ul>
                     </div>
                 </article>
@@ -83,10 +88,12 @@
                     <h2 class="experience-company">JIFFY.ai</h2>
                     <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
+                        <p class="experience-dates">June 2025 - September 2025</p>
                         <ul>
-                            <li>Developed the complete investment account opening journey for Finley mobile app using Flutter for various account types (Individual, Joint, IRA, Education)</li>
-                            <li>Integrated various third party tools like Plaid for data aggregation, Google Places API for address autocomplete functionality, and Twilio for phone verification</li>
-                            <li>Implemented AWS Lambda functions for serverless third party API integration</li>
+                            <li>Implemented automated user manual generation by leveraging JIFFY.ai API’s and Gen AI models for dynamic
+documentation</li>
+                            <li>Developed reusable front-end React components for deployment on the JIFFY.ai platform, enhancing widget integration
+for client applications</li>
                         </ul>
                     </div>
                 </article>
