--- a/experience.html
+++ b/experience.html
@@ -26,7 +26,7 @@
                 </div>
             </div>
 
-            <a class="resume-btn" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+            <a class="resume-btn" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
         </div>
     </nav>
 
@@ -41,10 +41,11 @@
                     <h2 class="experience-company">Way.com</h2>
                     <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
-                        <p class="experience-dates">June 2025 - September 2025</p>
+                        <p class="experience-dates">Jun 2025 - Sep 2025</p>
                         <ul>
-                            <li>Developed a mobile application with React Native to perform a 360° vehicle inspection and perform a damage cost assessment</li>
+                            <li>Developed a mobile application to perform a 360° vehicle inspection and perform a damage cost assessment</li>
                             <li>Implemented real time audio/video capture using WebRTC and integrated Gen AI models for guidance and analysis</li>
+                            <li>Built front-end interface using React Native, Tailwind CSS, and TypeScript </li>
                         </ul>
                     </div>
                 </article>
@@ -55,7 +56,7 @@
                     <h2 class="experience-company">JIFFY.ai</h2>
                     <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
-                        <p class="experience-dates">June 2025 - September 2025</p>
+                        <p class="experience-dates">Jun 2024 - Sep 2024</p>
                         <ul>
                             <li>Developed the end-to-end investment account opening journey for the Finley mobile app using Flutter, supporting
 multiple account types (Individual, Joint, IRA, and Education)</li>
@@ -72,12 +73,11 @@ functionality, and Twilio for phone verification</li>
                     <h2 class="experience-company">Bhailog</h2>
                     <p class="experience-role">UI/UX Designer</p>
                     <div class="experience-description">
-                        <p class="experience-dates">June 2025 - September 2025</p>
+                        <p class="experience-dates">May 2023 - Aug 2024</p>
                         <ul>
-                            <li>Led the end-to-end UX design process for the official Bhailog app, from research to final product delivery, ensuring a
-seamless and user-friendly experience</li>
-                            <li>Created wireframes, prototypes, and high-fidelity mockups using Figma and Miro, ensuring clear communication of
-design concepts and interactive elements</li>
+                            <li>Led end-to-end UX design for the official Bhailog app, conducting user research, defining user flows, and delivering production-ready designs</li>
+                            <li>Created wireframes, prototypes, and high-fidelity UI designs using Figma and Miro for seamless developer handoff</li>
+                            <li>Collaborated cross-functionally with leadership, product, and developer teams to iterate on designs and incorporate feedback</li>
                         </ul>
                     </div>
                 </article>
@@ -88,12 +88,13 @@ design concepts and interactive elements</li>
                     <h2 class="experience-company">JIFFY.ai</h2>
                     <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
-                        <p class="experience-dates">June 2025 - September 2025</p>
+                        <p class="experience-dates">June 2023 - August 2023</p>
                         <ul>
                             <li>Implemented automated user manual generation by leveraging JIFFY.ai API’s and Gen AI models for dynamic
 documentation</li>
                             <li>Developed reusable front-end React components for deployment on the JIFFY.ai platform, enhancing widget integration
 for client applications</li>
+                            <li>Designed and built a responsive web page to showcase demo videos of product features</li>
                         </ul>
                     </div>
                 </article>
