--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
 
-            <a class="resume-btn" href="resume.pdf" target="_blank" rel="noopener">Resume</a>
+            <a class="resume-btn" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
         </div>
     </nav>
 
