Made role name and date appear on experience description panel. Adjusting font weights for Company Names

--- a/experience.html
+++ b/experience.html
@@ -36,10 +36,9 @@
 
             <div class="experience-grid">
                 <!-- Card 1 -->
-                <article class="experience-card">
+                <article class="experience-card" data-role="Software Engineering Intern">
                     <img src="img/logos/wayLogo.svg" alt="wayLogo logo" class="experience-logo">
                     <h2 class="experience-company">Way.com</h2>
-                    <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
                         <p class="experience-dates">Jun 2025 - Sep 2025</p>
                         <ul>
@@ -51,10 +50,9 @@
                 </article>
 
                 <!-- Card 2 -->
-                <article class="experience-card">
+                <article class="experience-card" data-role="Software Engineering Intern">
                     <img src="img/logos/jiffyLogo.svg" alt="JIFFY.ai logo" class="experience-logo">
                     <h2 class="experience-company">JIFFY.ai</h2>
-                    <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
                         <p class="experience-dates">Jun 2024 - Sep 2024</p>
                         <ul>
@@ -68,10 +66,9 @@ functionality, and Twilio for phone verification</li>
                 </article>
 
                 <!-- Card 3 -->
-                <article class="experience-card">
+                <article class="experience-card" data-role="UI/UX Designer">
                     <img src="img/logos/bhailogLogo.svg" alt="Bhailog logo" class="experience-logo">
                     <h2 class="experience-company">Bhailog</h2>
-                    <p class="experience-role">UI/UX Designer</p>
                     <div class="experience-description">
                         <p class="experience-dates">May 2023 - Aug 2024</p>
                         <ul>
@@ -83,10 +80,9 @@ functionality, and Twilio for phone verification</li>
                 </article>
 
                 <!-- Card 4 -->
-                <article class="experience-card">
+                <article class="experience-card" data-role="Software Engineering Intern">
                     <img src="img/logos/jiffyLogo.svg" alt="JIFFY.ai logo" class="experience-logo">
                     <h2 class="experience-company">JIFFY.ai</h2>
-                    <p class="experience-role">SWE Intern</p>
                     <div class="experience-description">
                         <p class="experience-dates">June 2023 - August 2023</p>
                         <ul>
