--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h1>Nikhil Vinod</h1>
                 <p>I'm a third-year Computer Science student at Santa Clara University with an emphasis in data science. My interests span across AI, machine learning, full-stack development, and UI/UX Design. I'm passionate about applying my technical skills and creativity to develop innovative and impactful solutions. </p>
                 <ul class="socials">
-                    <li><a href="mailto:nikh.vinod@gmail.com" aria-label="Email">
+                    <li><a href="mailto:nvinod@scu.edu" aria-label="Email">
                         <img src="img/socials/emailButton.svg" alt="Gmail">
                     </a></li>
                     <li><a href="https://www.linkedin.com/in/nikhil-vinod/" target="_blank" rel="noopener" aria-label="LinkedIn">
