Added initial about me biography

--- a/about.html
+++ b/about.html
@@ -33,9 +33,16 @@
         <section class="about-section">
             <div class="about-text">
                 <h1>About Me</h1>
-                <p> I’m a student and developer passionate about creating meaningful web experiences. I enjoy learning new technologies and bringing ideas to life through design and code. In my free time, I like exploring new frameworks, photography, and playing basketball.
-                    I’m a student and developer passionate about creating meaningful web experiences. I enjoy learning new technologies and bringing ideas to life through design and code. In my free time, I like exploring new frameworks, photography, and playing basketball.
-                    I’m a student and developer passionate about creating meaningful web experiences. I enjoy learning new technologies and bringing ideas to life through design and code. In my free time, I like exploring new frameworks, photography, and playing basketball.
+                <p>
+                    I'm a third year computer science student and aspiring software engineer who's extremely passionate about pushing the boundaries of what's possible. I'm currently pursuing a BS in Computer Science from Santa Clara University with an emphasis in data science, along with a Mathematics minor. Through my academic coursework, personal projects, and internship experiences, I've built a strong foundation in computer science and software engineering practices.
+                </p>
+
+                <p>
+                    What excites me the most about being a software engineer is being able to see ideas come to life and impact real people. I've had the opportunity to experience this through several internships, where I've built full stack systems, developed mobile apps, and worked closely with product and design teams. Along with being a developer, I have experience in UI/UX design, leading the end-to-end design process for startups. My experience working as a designer has fostered a strong user-focused mindset and a deep appreciation for customer experience. Whether I'm writing code or designing interfaces, I aim to build intuitive, thoughtful solutions and always strive to deliver my best work in both professional and personal settings.
+                </p>
+
+                <p>
+                    My primary motivation is an intense desire to learn and stay curious. I love exploring the newest advancements in technology, particularly in the AI/ML space, and I'm always looking for ways to challenge myself. Whether that be through ambitious projects, hackathons, or internships, I am always looking to grow as both an engineer and as a person.
                 </p>
             </div>
         </section>
