Added trophy icon for winner hackathon projects

--- a/projects.html
+++ b/projects.html
@@ -37,6 +37,7 @@
             <div class="projects-grid">
                 <!-- Card 1 -->
                 <article class="projects-card" data-role="1st Place Winner @ xAI Hackathon 25" data-project-url="https://devpost.com/software/haggle-7ajqf2?ref_content=user-portfolio&ref_feature=in_progress">
+                    <img src="img/icons/trophy.svg" alt="" class="projects-card-trophy" aria-hidden="true">
                     <img src="img/project-pics/Haggle.svg" alt="Haggle logo" class="projects-logo">
                     <h2 class="projects-company">Haggle</h2>
                     <div class="projects-description">
@@ -76,6 +77,7 @@
 
                 <!-- Card 4 -->
                 <article class="projects-card" data-role="3rd Place Winner @ SCU Roblox Hack" data-project-url="https://devpost.com/software/manic-monday">
+                    <img src="img/icons/trophy.svg" alt="" class="projects-card-trophy" aria-hidden="true">
                     <img src="img/project-pics/ManicMonday.svg" alt="ManicMonday logo" class="projects-logo">
                     <h2 class="projects-company">Manic Monday</h2>
                     <div class="projects-description">
