More styling updates

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
                 </p>
 
                 <p>
-                    What excites me the most about being a software engineer is being able to see ideas come to life and impact real people. I've had the opportunity to experience this through several internships, where I've built full stack systems, developed mobile apps, and worked closely with product and design teams. Along with being a developer, I have experience in UI/UX design, leading the end-to-end design process for startups. My experience working as a designer has fostered a strong user-focused mindset and a deep appreciation for customer experience. Whether I'm writing code or designing interfaces, I aim to build intuitive, thoughtful solutions and always strive to deliver my best work in both professional and personal settings.
+                    What excites me the most about being a software engineer is being able to see ideas come to life and impact people. I've had the opportunity to experience this through several internships, where I've built full stack systems, developed mobile apps, and worked closely with product and design teams. Along with being a developer, I have experience in UI/UX design, leading the end-to-end design process for startups. My experience working as a designer has fostered a strong user-focused mindset and a deep appreciation for customer experience. Whether I'm writing code or designing interfaces, I aim to build intuitive, thoughtful solutions and always strive to deliver my best work in both professional and personal settings.
                 </p>
 
                 <p>
