--- a/projects.html
+++ b/projects.html
@@ -27,8 +27,29 @@
             </div>
 
             <a class="resume-btn" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+            <button type="button" class="nav-hamburger" aria-label="Open menu" aria-expanded="false">
+                <span class="nav-hamburger-line"></span>
+                <span class="nav-hamburger-line"></span>
+                <span class="nav-hamburger-line"></span>
+            </button>
         </div>
     </nav>
+
+    <div class="nav-sidebar-backdrop" aria-hidden="true"></div>
+    <aside class="nav-sidebar" aria-hidden="true">
+        <div class="nav-sidebar-header">
+            <button type="button" class="nav-sidebar-close" aria-label="Close menu">×</button>
+        </div>
+        <nav class="nav-sidebar-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="projects.html" aria-current="page">Projects</a></li>
+            </ul>
+        </nav>
+        <a class="nav-sidebar-resume" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+    </aside>
 
     <main class="page-wrapper">
         <section class="projects-section">
