Widen nav bar and page content

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <section class="main-section">
             <div class="intro">
                 <h1>Nikhil Vinod</h1>
-                <p>I'm a third-year Computer Science student at Santa Clara University with an emphasis in data science. My interests span across AI, machine learning, full-stack development, and UI/UX Design. I'm passionate about applying my technical skills and creativity to develop innovative and impactful solutions. </p>
+                <p>I'm a third-year Computer Science student at Santa Clara University with an emphasis in data science. My interests span across AI, machine learning, full-stack development, and UI/UX Design. I'm passionate about applying my technical skills and creativity to develop innovative and impactful solutions. Please feel free to connect with me below or explore my GitHub!</p>
                 <ul class="socials">
                     <li><a href="mailto:nvinod@scu.edu" aria-label="Email">
                         <img src="img/socials/emailButton.svg" alt="Gmail">
