--- a/projects.html
+++ b/projects.html
@@ -79,6 +79,7 @@
                         <ul>
                             <li>Built a responsive multi-page personal portfolio with vanilla HTML, CSS, and JavaScript</li>
                             <li>Implemented expandable card panels for project and experience details (To Be Changed as more features added)</li>
+                            <li>More features coming soon!</li>
                         </ul>
                     </div>
                 </article>
