--- a/pages/about.html
+++ b/pages/about.html
@@ -4,53 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
-
-    <nav class="nav-site">
-        <div class="nav-inner">
-            <div class="nav-left-group">
-                <div class="logo">
-                    <img src="img/logos/logo.svg" alt="NV Logo">
-                </div>
-
-                <div class="nav-links">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html"  aria-current="page">About Me</a></li>
-                        <li><a href="experience.html">Experience</a></li>
-                        <li><a href="projects.html">Projects</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <a class="resume-btn" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
-            <button type="button" class="nav-hamburger" aria-label="Open menu" aria-expanded="false">
-                <span class="nav-hamburger-line"></span>
-                <span class="nav-hamburger-line"></span>
-                <span class="nav-hamburger-line"></span>
-            </button>
-        </div>
-    </nav>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    
+    <nav class="nav-site" aria-label="Main navigation">
+  <div class="nav-inner">
+    <div class="nav-left-group">
+      <div class="logo">
+        <img src="../img/logos/logo.svg" alt="NV Logo">
+      </div>
+      <div class="nav-links">
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html" aria-current="page">About Me</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="projects.html">Projects</a></li>
+        </ul>
+      </div>
+    </div>
+    <a class="resume-btn" href="../files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+    <button type="button" class="nav-hamburger" aria-label="Open menu" aria-expanded="false">
+      <span class="nav-hamburger-line" aria-hidden="true"></span>
+      <span class="nav-hamburger-line" aria-hidden="true"></span>
+      <span class="nav-hamburger-line" aria-hidden="true"></span>
+    </button>
+  </div>
+</nav>
 
     <div class="nav-sidebar-backdrop" aria-hidden="true"></div>
-    <aside class="nav-sidebar" aria-hidden="true">
-        <div class="nav-sidebar-header">
-            <button type="button" class="nav-sidebar-close" aria-label="Close menu">×</button>
-        </div>
-        <nav class="nav-sidebar-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" aria-current="page">About Me</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-            </ul>
-        </nav>
-        <a class="nav-sidebar-resume" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
-    </aside>
+<aside class="nav-sidebar" aria-label="Mobile menu" aria-hidden="true">
+  <div class="nav-sidebar-header">
+    <button type="button" class="nav-sidebar-close" aria-label="Close menu">×</button>
+  </div>
+  <nav class="nav-sidebar-nav" aria-label="Mobile navigation">
+    <ul>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="about.html" aria-current="page">About Me</a></li>
+      <li><a href="experience.html">Experience</a></li>
+      <li><a href="projects.html">Projects</a></li>
+    </ul>
+  </nav>
+  <a class="nav-sidebar-resume" href="../files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+</aside>
 
-    <main class="container page-wrapper">
+    <main id="main-content" class="page-wrapper">
         <section class="about-section">
             <div class="about-text">
                 <h1>About Me</h1>
@@ -68,9 +67,8 @@
             </div>
         </section>
     </main>
+    <img src="../img/elements/wave.svg" alt="" class="page-wave">
 
-    <img src="img/elements/wave.svg" alt="" class="page-wave">
-
-    <script src="script.js"></script>
+    <script src="../js/app.js" defer></script>
 </body>
 </html>
