--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,62 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body class="projects-page">
-
-    <nav class="nav-site">
-        <div class="nav-inner">
-            <div class="nav-left-group">
-                <div class="logo">
-                    <img src="img/logos/logo.svg" alt="NV Logo">
-                </div>
-
-                <div class="nav-links">
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About Me</a></li>
-                        <li><a href="experience.html">Experience</a></li>
-                        <!-- aria-current moved here so "Projects" is highlighted -->
-                        <li><a href="projects.html" aria-current="page">Projects</a></li>
-                    </ul>
-                </div>
-            </div>
-
-            <a class="resume-btn" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
-            <button type="button" class="nav-hamburger" aria-label="Open menu" aria-expanded="false">
-                <span class="nav-hamburger-line"></span>
-                <span class="nav-hamburger-line"></span>
-                <span class="nav-hamburger-line"></span>
-            </button>
-        </div>
-    </nav>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    
+    <nav class="nav-site" aria-label="Main navigation">
+  <div class="nav-inner">
+    <div class="nav-left-group">
+      <div class="logo">
+        <img src="../img/logos/logo.svg" alt="NV Logo">
+      </div>
+      <div class="nav-links">
+        <ul>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="about.html">About Me</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="projects.html" aria-current="page">Projects</a></li>
+        </ul>
+      </div>
+    </div>
+    <a class="resume-btn" href="../files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+    <button type="button" class="nav-hamburger" aria-label="Open menu" aria-expanded="false">
+      <span class="nav-hamburger-line" aria-hidden="true"></span>
+      <span class="nav-hamburger-line" aria-hidden="true"></span>
+      <span class="nav-hamburger-line" aria-hidden="true"></span>
+    </button>
+  </div>
+</nav>
 
     <div class="nav-sidebar-backdrop" aria-hidden="true"></div>
-    <aside class="nav-sidebar" aria-hidden="true">
-        <div class="nav-sidebar-header">
-            <button type="button" class="nav-sidebar-close" aria-label="Close menu">×</button>
-        </div>
-        <nav class="nav-sidebar-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="projects.html" aria-current="page">Projects</a></li>
-            </ul>
-        </nav>
-        <a class="nav-sidebar-resume" href="files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
-    </aside>
+<aside class="nav-sidebar" aria-label="Mobile menu" aria-hidden="true">
+  <div class="nav-sidebar-header">
+    <button type="button" class="nav-sidebar-close" aria-label="Close menu">×</button>
+  </div>
+  <nav class="nav-sidebar-nav" aria-label="Mobile navigation">
+    <ul>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="about.html">About Me</a></li>
+      <li><a href="experience.html">Experience</a></li>
+      <li><a href="projects.html" aria-current="page">Projects</a></li>
+    </ul>
+  </nav>
+  <a class="nav-sidebar-resume" href="../files/Nikhil_Vinod_Resume.pdf" target="_blank" rel="noopener">Resume</a>
+</aside>
 
-    <main class="page-wrapper">
+    <main id="main-content" class="page-wrapper">
         <section class="projects-section">
             <h1>Projects</h1>
 
             <div class="projects-grid">
-                <!-- Card 1 -->
                 <article class="projects-card" data-role="1st Place Winner @ xAI Hackathon 25" data-project-url="https://devpost.com/software/haggle-7ajqf2?ref_content=user-portfolio&ref_feature=in_progress">
-                    <img src="img/icons/trophy.svg" alt="" class="projects-card-trophy" aria-hidden="true">
-                    <img src="img/project-pics/Haggle.svg" alt="Haggle logo" class="projects-logo">
+                    <img src="../img/icons/trophy.svg" alt="" class="projects-card-trophy" aria-hidden="true">
+                    <img src="../img/project-pics/Haggle.svg" alt="Haggle logo" class="projects-logo">
                     <h2 class="projects-company">Haggle</h2>
                     <div class="projects-description">
                         <ul>
@@ -71,9 +68,8 @@
                     </div>
                 </article>
 
-                <!-- Card 2 -->
                 <article class="projects-card" data-role="This Website!" data-project-url="#">
-                    <img src="img/project-pics/Portfolio.svg" alt="Portfolio logo" class="projects-logo">
+                    <img src="../img/project-pics/Portfolio.svg" alt="Portfolio logo" class="projects-logo">
                     <h2 class="projects-company">Portfolio</h2>
                     <div class="projects-description">
                         <ul>
@@ -84,9 +80,8 @@
                     </div>
                 </article>
 
-                <!-- Card 3 -->
                 <article class="projects-card" data-role="Data Mining Course Project @ SCU" data-project-url="https://github.com/RosalieWessels/F1_CSEN140_Project">
-                    <img src="img/project-pics/F1Project.svg" alt="F1 logo" class="projects-logo">
+                    <img src="../img/project-pics/F1Project.svg" alt="F1 logo" class="projects-logo">
                     <h2 class="projects-company">F1 Predictor</h2>
                     <div class="projects-description">
                         <ul>
@@ -97,10 +92,9 @@
                     </div>
                 </article>
 
-                <!-- Card 4 -->
                 <article class="projects-card" data-role="3rd Place Winner @ SCU Roblox Hack" data-project-url="https://devpost.com/software/manic-monday">
-                    <img src="img/icons/trophy.svg" alt="" class="projects-card-trophy" aria-hidden="true">
-                    <img src="img/project-pics/ManicMonday.svg" alt="ManicMonday logo" class="projects-logo">
+                    <img src="../img/icons/trophy.svg" alt="" class="projects-card-trophy" aria-hidden="true">
+                    <img src="../img/project-pics/ManicMonday.svg" alt="Manic Monday logo" class="projects-logo">
                     <h2 class="projects-company">Manic Monday</h2>
                     <div class="projects-description">
                         <ul>
@@ -114,9 +108,8 @@
             </div>
         </section>
     </main>
+    <img src="../img/elements/wave.svg" alt="" class="page-wave">
 
-    <img src="img/elements/wave.svg" alt="" class="page-wave">
-
-    <script src="script.js" defer></script>
+    <script src="../js/app.js" defer></script>
 </body>
 </html>
