--- a/pages/about.html
+++ b/pages/about.html
@@ -54,11 +54,11 @@
             <div class="about-text">
                 <h1>About Me</h1>
                 <p>
-                    I'm a third year computer science student and aspiring software engineer who's extremely passionate about pushing the boundaries of what's possible. I'm currently pursuing a BS in Computer Science from Santa Clara University with an emphasis in data science, along with a Mathematics minor. Through my academic coursework, personal projects, and internship experiences, I've built a strong foundation in computer science and software engineering practices.
+                    I'm an aspiring software engineer who's extremely passionate about pushing the boundaries of what's possible. I'm currently pursuing a BS in Computer Science from Santa Clara University with an emphasis in data science, along with a Mathematics minor. Through my academic coursework, personal projects, and internship experiences, I've built a strong foundation in computer science and software engineering practices.
                 </p>
 
                 <p>
-                    What excites me the most about being a software engineer is being able to see ideas come to life and impact people. I've had the opportunity to experience this through several internships, where I've built full stack systems, developed mobile apps, and worked closely with product and design teams. Along with being a developer, I have experience in UI/UX design, leading the end-to-end design process for startups. My experience working as a designer has fostered a strong user-focused mindset and a deep appreciation for customer experience. Whether I'm writing code or designing interfaces, I aim to build intuitive, thoughtful solutions and always strive to deliver my best work in both professional and personal settings.
+                    What excites me the most about being a software engineer is being able to see ideas come to life and impact people. I've had the opportunity to experience this through several internships, where I've built full stack systems, developed mobile apps, and worked closely with product and design teams. Along with being a developer, I have experience in UI/UX design, leading the end-to-end design process for startups. My experience working as a designer has fostered a strong user-focused mindset and a deep appreciation for customer experience. Whether I'm writing code or designing interfaces, I aim to build intuitive, thoughtful solutions and always strive to deliver my best work.
                 </p>
 
                 <p>
