Updated project description

--- a/projects/index.html
+++ b/projects/index.html
@@ -73,8 +73,8 @@
                     <h2 class="projects-company">Portfolio</h2>
                     <div class="projects-description">
                         <ul>
-                            <li>Built a responsive multi-page personal portfolio with vanilla HTML, CSS, and JavaScript</li>
-                            <li>Implemented expandable card panels for project and experience details (To Be Changed as more features added)</li>
+                            <li>Built personal portfolio with vanilla HTML, CSS, and JavaScript</li>
+                            <li>Implemented responsive design for all device sizes</li>
                             <li>More features coming soon!</li>
                         </ul>
                     </div>
